--- a/src/styles/Points.module.scss
+++ b/src/styles/Points.module.scss
@@ -11,14 +11,17 @@
 }
 
 .anchor {
-  stroke: $gray-4;
+  stroke: $gray-3;
   stroke-width: 5;
   fill: $white;
   cursor: pointer;
+  opacity: 0.6;
 }
 
 .anchor-active {
   stroke: $gray-3;
+  opacity: 1;
+  fill: $white;
 }
 
 .point-active {
@@ -27,4 +30,15 @@
 
 .point-first {
   stroke: $green;
+}
+
+.line {
+  stroke: $gray-3;
+  stroke-dasharray: 5 5;
+  stroke-width: 1;
+  opacity: 0.6;
+}
+
+.line-active {
+  opacity: 1;
 }
