--- a/src/styles/TextInput.modules.scss
+++ b/src/styles/TextInput.modules.scss
@@ -5,12 +5,5 @@
 }
 
 .input {
-  color: $gray-4;
-  font-size: rem(10px);
-  text-align: center;
-  width: rem(32px);
-  height: rem(20px);
-  background: $gray-1;
-  border: none;
-  border-radius: rem(4px);
+  @extend %input-field;
 }
