--- a/src/styles/common/FormBase.module.scss
+++ b/src/styles/common/FormBase.module.scss
@@ -5,3 +5,14 @@
   margin-bottom: rem(10px);
   display: block;
 }
+
+%input-field {
+  color: $gray-4;
+  font-size: rem(10px);
+  text-align: center;
+  width: rem(32px);
+  height: rem(20px);
+  background: $gray-1;
+  border: none;
+  border-radius: rem(4px);
+}
