--- a/src/styles/SVG.module.scss
+++ b/src/styles/SVG.module.scss
@@ -3,8 +3,8 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
   background-color: $gray-5;
-  width: 100%;
   position: relative;
 }
 
